Feature/htmx 1 (#635)
* Very basic index html with live reload

* EoE commit - WiP

* Pre-dinner commit

* End of evening commit

* Pre-dinner commit

* End of evening commit

* Pre-dinner commit

* End of evening commit

* CSS file renaming

* Pre-dinner commit - working on table pagination

* End of evening commit - pagination 'off by one' errors

* WiP on books table pagination

* Still working on table pagination - getting there

* Pre-dinner commit

* End of evening commit

* Pre-dinner commit

* Refactored htmx js interactions for swiper

* Tweaking hx-swap for slides

* Pre-dinner commit - working on TomSelect for review finder

* Minor evening changes

* Pre dinner commit

* Pre-dinner commit

* Part way thru converting table to hx-get

* Basic version of 4 find options working

* Refacoring Tom Select JS

* WiP on clearing other selects when one selected

* Search implemented

* Stats page implemented

* Working on create review

* Pre-dinner commit

* Pre dinner commit

* End of evening commit

* Working genre typeahead on Add Review

* Pre dinner commit

* End of evening commit

* Pre dinner commit

* Interim commit - before testing main

* End of evening commit

* Updated dependencies

* End of evening commit

* Working on Google Books Search service tier

* Pre-dinner commit

* End of evening commit

* Pre dinner commit

* End of evening commit

* End of evening commit

* Basic new review form validation working

* Pre dinner commit

* Pre dinner commit

* End of evening commit

* Book review deletion implemented

* Pre-dinner commit

* End of evening commit

* Fix for missing googleBookId

* Added Thymeleaf / Htmx error handling

* Fix to Find Reviews for clears

* Pre dinner commit

* End of evening commit

* Pre dinner commit

* Pre dinner commit

* End of evening commit

* Pre-dinner commit

* Working draft of stateless flash toast messages

* Pre dinner commit

* Starting investigations into empty book ids

* End of evening commit

* nd of evening 